Implemented EnumProperties